[tool.poetry]
name = "Q_trajectory"
version = "0.0.1"
description = "quantum single shot trajectory analysis"
authors = ["Nikolay Zhitkov"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.22.4"
scipy = "^1.8.1"
pandas = "^1.4.2"
sklearn = "^0.0"
matplotlib = "^3.5.2"
h5py = "^3.7.0"
pyarrow = "^8.0.0"
Cython = ">=0.29.6"
Shapely = ">=1.8.0"
geohash2 = "1.1"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
flake8 = "^4.0.1"
tox = "^3.25.0"
tox-gh-actions = "^2.9.1"
pytest-xdist = "^2.5.0"
pytest-sugar = "^0.9.4"
pytest-clarity = "^1.0.1"
notebook = "^6.4.12"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
